--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "autoprefixer": "10.4.15",
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "3.3.3"
   }
 }
